# libcamera-apps-dual_camera

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  libcamera_detect.cpp  libcamera_hello.cpp  libcamera_jpeg.cpp  libcamera_raw.cpp  libcamera_still.cpp  libcamera_vid.cpp
core/: libcamera_app.cpp  libcamera_app.hpp  libcamera_encoder.hpp  options.cpp  options.hpp  post_processor.cpp  post_processor.hpp  still_options.hpp  video_options.hpp
encoder/: CMakeLists.txt  encoder.cpp  h264_encoder.cpp  mjpeg_encoder.cpp  null_encoder.cpp
image/: CMakeLists.txt  bmp.cpp  dng.cpp  jpeg.cpp  png.cpp  yuv.cpp
output/: CMakeLists.txt  circular_output.cpp  file_output.cpp  net_output.cpp  output.cpp
post_processing_stages/: CMakeLists.txt  annotate_cv_stage.cpp  hdr_stage.cpp  motion_detect_stage.cpp  object_classify_tf_stage.cpp  object_detect_tf_stage.cpp  tf_stage.cpp
preview/: CMakeLists.txt  drm_preview.cpp  egl_preview.cpp  mesh.cpp  mesh.hpp  null_preview.cpp  preview.cpp  preview.hpp  qt_preview.cpp
